pkgs/drbd9/drbd/.compat_test.6.1.26/need_make_request_recursion.stderr
<command-line>: warning: "KBUILD_MODNAME" redefined
<command-line>: note: this is the location of the previous definition
/home/hernad/nix/kernel/build-drbd/drbd/drbd-kernel-compat/tests/need_make_request_recursion.c:4:12: warning: missing terminating ' character
    4 | # error Don't need recursion
      |            ^
/home/hernad/nix/kernel/build-drbd/drbd/drbd-kernel-compat/tests/need_make_request_recursion.c:4:3: error: #error Don't need recursion
    4 | # error Don't need recursion
      |   ^~~~~
